# aoc-2024

./: .gitignore  README.md  pyproject.toml
src/: cli.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  utils.py
src/day01/: main.py
src/year_2024/: day_01.py  day_02.py  day_03.py
