[project]
name = "aoc-2024"
version = "0.1.0"
description = "Solutions for Advent of Code 2024"
readme = "README.md"
authors = [{ name = "Emanuel Ferm", email = "emanuel@eferm.com" }]
requires-python = ">=3.12"
dependencies = ["requests>=2.32.3"]

[project.scripts]
bootstrap = "src.utils:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.13.0", "ruff>=0.8.1", "types-requests>=2.32.0.20241016"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 79
namespace-packages = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T20", "PTH123", "E741", "PLR2004", "ANN202"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.pyright]
typeCheckingMode = "strict"
